--- a/views/css/simulate.css
+++ b/views/css/simulate.css
@@ -106,9 +106,11 @@
                     display: grid;
                     grid-template-columns: 1fr 1fr 1fr;
                     font-size: 12px;
+                    background-color: #f5f5f5;
                 }
                     .keyboard-key {
-                        background-color: #f5f5f5;
+                        /* background-color: #f5f5f5; */
+                        border-radius: 5px;
                         font-weight: 600;
                         color: var(--main-font-color-high);
                         cursor: pointer;
@@ -116,7 +118,10 @@
                         line-height: 25px;
                     }
                         .keyboard-key:hover { background-color: #f0f0f0; }
-                        .keyboard-key:active { background-color: #e5e5e5; }
+                        .keyboard-key:active { 
+                            transform: scale(.9);
+                            background-color: #e5e5e5;
+                        }
 
             .container > .main {
                 position: relative;
@@ -284,31 +289,6 @@
                             grid-template-rows: 50px;
                         }
 
-                        /* .item-input-block {
-                            display: flex;
-                            flex-direction: row;
-                            align-items: center;
-                            justify-content: center;
-                            align-content: center;
-                            flex-wrap: nowrap;
-                            width: 100%;
-                            margin: 8px 0 16px 0;
-
-                            transition: .15s all;
-                        } */
-                            /* .item-input-icon {
-                                font-size: 20px;
-                                margin: 0 8px 0 0;
-
-                                transition: .15s all;
-                            } */
-                            /* .item-input-header {
-                                font-size: 14px;
-                                font-weight: 600;
-                                flex-grow: 1;
-
-                                transition: .15s all;
-                            } */
                         .item-input-box {
                             border-width: 2px;
                             border-style: solid;
